galary section done

--- a/index.html
+++ b/index.html
@@ -44,6 +44,31 @@
 
 
       </header>
+
+      <!-- ----------main section------------- -->
+
+
+      <main >
+
+        <section class="gallary">
+          <h2 class="galary-heading">Our Photo gallery</h2>
+            <div class="main-gallary">
+              <img class="galary-img-style-1" src="./assets/img/galaryImg5.jpg" alt="">
+              <div class="right-galary">
+                  <div class="top-galary">
+                    <img class="galary-img-style-2" src="./assets/img/gallaryImg1.jpg" alt="">
+                    <img class="galary-img-style-3" src="./assets/img/galaryImg2.jpg" alt="">
+                  </div>
+                  <div class="bottom-galary">
+                    <img class="galary-img-style-4" src="./assets/img/galaryImg3.jpg" alt="">
+                    <img class="galary-img-style-5" src="./assets/img/galaryImg4.jpg" alt="">
+                  </div>
+              </div>
+            </div>
+        </section>
+
+
+      </main>
      
       
 
