contact section add

--- a/index.html
+++ b/index.html
@@ -106,6 +106,31 @@
               </div>
           </div>
       </div>
+
+
+
+       <!-- ----------card section------------- -->
+
+       <div class="bg-image">
+        <div class="overlay-content">
+          <p>Enjoying the journey</p>
+          <h2>Wedding flowers: getting the most</h2>
+          <button class="Shop-now-btn">Start Now</button>
+        </div>
+      </div>
+
+        <!-- ----------contact section------------- -->
+
+        <section id="contact">
+          <h2>Contact Us</h2>
+          <form>
+            <input type="text" placeholder="Your Name">
+            <input type="email" placeholder="Your Email">
+            <textarea rows="10" placeholder="Your Message"></textarea>
+            <button type="submit">Submit</button>
+          </form>
+        </section>
+        
   
 
 
